Added title, slogan, and repo link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>Trey's Website</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -13,16 +13,12 @@
 		/* in-file CSS here */
 	</style>
 
-	<!-- external and internal JavaScript -->
-	<script src="scripts.js" defer></script>
-	<script>
-		// in-page JavaScript here
-	</script>
-
 </head>
 <body>
 
-	<p>This is a test.</p>
+	<h1>Trey Byther</h1>
+	<p>Student, brother, runner, reader, crocheter, binge-wathcer.</p>
+	<p><a href="https://github.com/treybyther/treybyther.github.io">Github Repository</a></p>
 
 </body>
 </html>
