Added subheads for activities, tiny projects, and major projects

--- a/index.html
+++ b/index.html
@@ -20,5 +20,18 @@
 	<p>Student, brother, runner, reader, crocheter, binge-wathcer.</p>
 	<p><a href="https://github.com/treybyther/treybyther.github.io">Github Repository</a></p>
 
+	<h2>Activities</h2>
+	<ul>
+		<li>Links to future activities go here</li>
+	</ul>
+
+	<h2>Tiny Projects</h2>
+	<ul>
+		<li>Links to future Tiny Projects go here</li>
+	</ul>
+
+	<h2>Major Project</h2>
+	<p>Coming soon.</p>
+
 </body>
 </html>
