created folder and index file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<h1>Trey Byther</h1>
-	<p>Student, brother, runner, reader, crocheter, binge-wathcer.</p>
+	<p>Student, brother, runner, reader, crocheter, binge-watcher.</p>
 	<p><a href="https://github.com/treybyther/treybyther.github.io">Github Repository</a></p>
 
 	<h2>Activities</h2>
