added title, header, image

--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -23,7 +23,12 @@
 </head>
 <body>
 
-	<!-- HTML elements here -->
+	<header>
+	<h1>Snickerdoodle Cookies</h1>
+	<img src="jessica-johnston-92G0voshUr0-unsplash.jpg">
+	<p>A scrumptious Snickerdoodle cookie. Coated with tons of cinnamon and sugar.</p>
+
+	</header>
 
 </body>
 </html>
