--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -25,7 +25,7 @@
 
 	<header>
 	<h1>Snickerdoodle Cookies</h1>
-	<img src="jessica-johnston-92G0voshUr0-unsplash.jpg">
+	<img src="jessica-johnston-92G0voshUr0-unsplash (1).jpg">
 	<p>A scrumptious Snickerdoodle cookie. Coated with tons of cinnamon and sugar.</p>
 
 	</header>
