--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -30,5 +30,29 @@
 
 	</header>
 
+	<main>
+		<section>
+			<h2>Ingredients</h2>
+			<ul>
+				<li>Dough Ingredients</li>
+				<ul>
+					<li>1 cup unsalted butter</li>
+					<li>1.5 cups sugar</li>
+					<li>2 large eggs</li>
+					<li>2 teaspoons vanilla</li>
+					<li>2.75 cups flour</li>
+					<li>1.5 teaspoons cream of tartar</li>
+					<li>0.5 teaspoon baking soda</li>
+					<li>0.75 teaspoon salt</li>
+				</ul>
+				<li>Cinnamon-Sugar Mix</li>
+				<ul>
+					<li>0.25 cups sugar</li>
+					<li>1.5 tablespoons cinnamon</li>
+				</ul>
+			</ul>
+		</section>
+	</main>
+
 </body>
 </html>
