--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -52,6 +52,22 @@
 				</ul>
 			</ul>
 		</section>
+
+		<section>
+			<h2>Directions</h2>
+			<ol>
+				<li>Preheat oven to 350 degrees.</li>
+				<li>In a large mixing bowl, cream butter and sugar for 4-5 minutes. Look for light and fluffy.</li>
+				<li>Add in eggs and vanilla, then cream for 1-2 minutes more.</li>
+				<li>Stir in flour, cream of tartar, baking soda, and salt.</li>
+				<li>In a small separate bowl, stir together sugar and cinnamon.</li>
+				<li>Roll dough into small balls (roughly one "spoonful" large).</li>
+				<li>Drop ball into sugar and cinnamon mixture and coat well.</li>
+				<li>Add extra cinnamon and sugar to liking.</li>
+				<li>Place on parchment paper-lined baking sheet.</li>
+				<li>Bake for 9-11 minutes.</li>
+			</ol>
+		</section>
 	</main>
 
 </body>
