changed recipe and added copyright

--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -37,18 +37,17 @@
 				<li>Dough Ingredients</li>
 				<ul>
 					<li>1 cup unsalted butter</li>
-					<li>1.5 cups sugar</li>
+					<li>2 cups sugar</li>
 					<li>2 large eggs</li>
 					<li>2 teaspoons vanilla</li>
-					<li>2.75 cups flour</li>
-					<li>1.5 teaspoons cream of tartar</li>
-					<li>0.5 teaspoon baking soda</li>
-					<li>0.75 teaspoon salt</li>
+					<li>2&frac34; cups flour</li>
+					<li>&frac12; teaspoon baking soda</li>
+					<li>&frac34; teaspoon salt</li>
 				</ul>
 				<li>Cinnamon-Sugar Mix</li>
 				<ul>
-					<li>0.25 cups sugar</li>
-					<li>1.5 tablespoons cinnamon</li>
+					<li>&frac14; cups sugar</li>
+					<li>2 tablespoons cinnamon</li>
 				</ul>
 			</ul>
 		</section>
@@ -57,9 +56,9 @@
 			<h2>Directions</h2>
 			<ol>
 				<li>Preheat oven to 350 degrees.</li>
-				<li>In a large mixing bowl, cream butter and sugar for 4-5 minutes. Look for light and fluffy.</li>
+				<li>In a large mixing bowl, cream butter and sugar for 3-4 minutes. Look for light and fluffy.</li>
 				<li>Add in eggs and vanilla, then cream for 1-2 minutes more.</li>
-				<li>Stir in flour, cream of tartar, baking soda, and salt.</li>
+				<li>Stir in flour, baking soda, and salt.</li>
 				<li>In a small separate bowl, stir together sugar and cinnamon.</li>
 				<li>Roll dough into small balls (roughly one "spoonful" large).</li>
 				<li>Drop ball into sugar and cinnamon mixture and coat well.</li>
@@ -68,6 +67,11 @@
 				<li>Bake for 9-11 minutes.</li>
 			</ol>
 		</section>
+
+		<footer>
+			<p>©Trey Byther. Photo Credit: Photo by <a href="https://unsplash.com/@jdjohnston?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Jessica Johnston</a> on <a href="https://unsplash.com/photos/a-bunch-of-cookies-that-are-cooling-on-a-rack-92G0voshUr0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+			
+		</footer>
 	</main>
 
 </body>
