linked on my main index, and finished up recipe

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<h2>Tiny Projects</h2>
 	<ul>
-		<li>Links to future Tiny Projects go here</li>
+		<li><a href="/favorite-recipe/index.html">Tiny Project 2: Favorite Recipe</li>
 	</ul>
 
 	<h2>Major Project</h2>
