--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -26,7 +26,7 @@
 	<header>
 	<h1>Snickerdoodle Cookies</h1>
 	<img src="jessica-johnston-92G0voshUr0-unsplash (1).jpg">
-	<p>A scrumptious Snickerdoodle cookie. Coated with tons of cinnamon and sugar.</p>
+	<p>A scrumptious Snickerdoodle cookie coated with tons of cinnamon and sugar. I chose this recipe because I used to make Snickerdoodle's with my aunt every week when I was young.</p>
 
 	</header>
 
