tried changing question font size

--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -10,7 +10,11 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-		/* in-file CSS here */
+		
+       #question {
+            font-size: 72px;
+        }
+
 	</style>
 
 </head>
@@ -18,7 +22,9 @@
 
 	<h1>Code Log 1: HTML Semantic Tags</h1>
 
-    <p1></p1>
+    <p id="question">What is the difference between non-semantic and semantic tags in HTML? </p>
+
+    <p id="question">What are two (or more) benefits of using semantic tags?</p>
 	
 </body>
 </html>
