chagged formatting of questions

--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -12,7 +12,9 @@
 	<style>
 		
        #question {
-            font-size: 72px;
+            font-size: 15px;
+            font-weight: bold;
+            text-align: center;
         }
 
 	</style>
