--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -12,8 +12,7 @@
 	<style>
 		
        #question {
-            font-size: 30px;
-            font-weight: bold;
+            color: blue
         }
 
 	</style>
@@ -22,10 +21,14 @@
 <body>
 
 	<h1>Code Log 1: HTML Semantic Tags</h1>
-
-    <p id="question">What is the difference between non-semantic and semantic tags in HTML? </p>
-
-    <p id="question">What are two (or more) benefits of using semantic tags?</p>
-	
+    <main>
+        <section>
+            <h2 id="question">What is the difference between non-semantic and semantic tags in HTML? </h2>
+        </section>
+    
+        <section>
+            <h2 id="question">What are two (or more) benefits of using semantic tags?</h2>
+        </section>
+    </main>
 </body>
 </html>
