--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -12,7 +12,7 @@
 	<style>
 		
        #question {
-            color: blue
+            background-color:rgb(203, 202, 202)
         }
 
 	</style>
