--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -27,10 +27,18 @@
                 '-  -';
         }
 
-        #question1 {
-
+        h1 {
+            grid-area: h1;
+            text-align: center;
         }
 
+        #question1 {
+            grid-area: question1;
+        }
+
+        #question2 {
+            grid-area: question2;
+        }
 	</style>
 
 </head>
@@ -47,6 +55,6 @@
                 <h2 id="question2">What are two (or more) benefits of using semantic tags?</h2>
             </section>
         </main>
-    </dive>
+    </div>
 </body>
 </html>
