--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -32,12 +32,24 @@
             text-align: center;
         }
 
+        p2 {
+            background-color: rgb(227, 227, 227)
+        }
+
         #question1 {
             grid-area: question1;
         }
 
         #question2 {
             grid-area: question2;
+        }
+
+        #answer1 {
+            grid-area: answer1;
+        }
+
+        #answer2 {
+            grid-area: answer2;
         }
 	</style>
 
@@ -49,10 +61,16 @@
         <main>
             <section>
                 <h2 id="question1">What is the difference between non-semantic and semantic tags in HTML? </h2>
+                <p2 id="answer1">
+
+                </p2>
             </section>
         
             <section>
                 <h2 id="question2">What are two (or more) benefits of using semantic tags?</h2>
+                <p2 id="answer2">
+                    
+                </p2>
             </section>
         </main>
     </div>
