--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -24,7 +24,7 @@
             grid-template-areas:
                 'h1  h1'
                 'question1  question2'
-                '-  -';
+                'answer1  answer2';
         }
 
         h1 {
@@ -62,14 +62,14 @@
             <section>
                 <h2 id="question1">What is the difference between non-semantic and semantic tags in HTML? </h2>
                 <p2 id="answer1">
-
+                    here is my answer for question 1
                 </p2>
             </section>
         
             <section>
                 <h2 id="question2">What are two (or more) benefits of using semantic tags?</h2>
                 <p2 id="answer2">
-                    
+                    here is my answer for question 2
                 </p2>
             </section>
         </main>
