--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -15,18 +15,6 @@
             background-color:rgb(203, 202, 202)
         }
 
-        #codelog1 {
-            display: grid;
-            grid-template-columns: auto auto;
-            grid-template-rows: auto auto auto;
-            grid-column-gap: 2vw;
-            grid-row-gap: 2vh;
-            grid-template-areas:
-                'h1  h1'
-                'question1  question2'
-                'answer1  answer2';
-        }
-
         h1 {
             grid-area: h1;
             text-align: center;
@@ -44,12 +32,16 @@
             grid-area: question2;
         }
 
-        #answer1 {
-            grid-area: answer1;
-        }
 
-        #answer2 {
-            grid-area: answer2;
+        #codelog1 {
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-template-rows: auto auto;
+            grid-column-gap: 2vw;
+            grid-row-gap: 2vh;
+            grid-template-areas:
+                'h1   h1'
+                'question1  question2';
         }
 	</style>
 
@@ -59,16 +51,16 @@
     <div id="codelog1">
 	<h1>Code Log 1: HTML Semantic Tags</h1>
         <main>
-            <section>
-                <h2 id="question1">What is the difference between non-semantic and semantic tags in HTML? </h2>
-                <p2 id="answer1">
+            <section id="question1">
+                <h2>What is the difference between non-semantic and semantic tags in HTML? </h2>
+                <p2>
                     here is my answer for question 1
                 </p2>
             </section>
         
-            <section>
-                <h2 id="question2">What are two (or more) benefits of using semantic tags?</h2>
-                <p2 id="answer2">
+            <section id="question2">
+                <h2>What are two (or more) benefits of using semantic tags?</h2>
+                <p2>
                     here is my answer for question 2
                 </p2>
             </section>
