--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -38,7 +38,6 @@
             grid-template-columns: auto auto;
             grid-template-rows: auto auto;
             grid-column-gap: 2vw;
-            grid-row-gap: 2vh;
             grid-template-areas:
                 'h1   h1'
                 'question1  question2';
@@ -54,7 +53,10 @@
             <section id="question1">
                 <h2>What is the difference between non-semantic and semantic tags in HTML? </h2>
                 <p>
-                    here is my answer for question 1
+                    The difference between non-semantic and semantic tags in HTML, are that a semantic tag is one that 
+                    has meaning. Basically, it encommpasses how that specific section is going to behave. For example,
+                    if you are creating a table, and you use <code>&lt;table</code>, you know that it is going to be 
+                    setting up a table, and there is internal instructions on how to set that specific table up.
                 </p>
             </section>
         
