--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -55,8 +55,11 @@
                 <p>
                     The difference between non-semantic and semantic tags in HTML, are that a semantic tag is one that 
                     has meaning. Basically, it encommpasses how that specific section is going to behave. For example,
-                    if you are creating a table, and you use <code>&lt;table</code>, you know that it is going to be 
-                    setting up a table, and there is internal instructions on how to set that specific table up.
+                    if you are creating a table, and you use <code>&lt;table</code><code>&gt;</code>, you know that it is going to be 
+                    setting up a table, and there is internal instructions on how to set that specific table up. Whereas, with the non-semantic tags,
+                    such as <code>&lt;div</code><code>&gt;</code>, it is all internal on the coders end, and there are no acutal
+                    instructions for the program. It doesn't tell you anything specific about what is going to happen
+                    to that section essentially. 
                 </p>
             </section>
         
