answered the questions

--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -66,7 +66,17 @@
             <section id="question2">
                 <h2>What are two (or more) benefits of using semantic tags?</h2>
                 <p>
-                    here is my answer for question 2
+                    <ul>
+                        <li>One benefit of using a semantic tag is allowing someone who does not understand any sort of HTML to
+                            have a slight understanding of what is actually happening in the code. For example, if someone is trying
+                            to help you develope your website, and is looking at your code, they would be able to look at it and 
+                            actually have an understanding of how you set it up.
+                        </li>
+                        <li>Another benefit of using a semantic tag is helping yourself remember why you did what you did. I think 
+                            when it comes to decoding, having a better sense of how you actually set up your code will help you look 
+                            at the specific sections that you have in an organized way and really understand where you went wrong.
+                        </li>
+				    </ul>
                 </p>
             </section>
         
