fixed errors and typos

--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -20,7 +20,7 @@
             text-align: center;
         }
 
-        p {
+        p, ul {
             background-color: rgb(227, 227, 227)
         }
 
@@ -54,10 +54,10 @@
                 <h2>What is the difference between non-semantic and semantic tags in HTML? </h2>
                 <p>
                     The difference between non-semantic and semantic tags in HTML, are that a semantic tag is one that 
-                    has meaning. Basically, it encommpasses how that specific section is going to behave. For example,
+                    has meaning. Basically, it encompasses how that specific section is going to behave. For example,
                     if you are creating a table, and you use <code>&lt;table</code><code>&gt;</code>, you know that it is going to be 
                     setting up a table, and there is internal instructions on how to set that specific table up. Whereas, with the non-semantic tags,
-                    such as <code>&lt;div</code><code>&gt;</code>, it is all internal on the coders end, and there are no acutal
+                    such as <code>&lt;div</code><code>&gt;</code>, it is all internal on the coders end, and there are no acutal 
                     instructions for the program. It doesn't tell you anything specific about what is going to happen
                     to that section essentially. 
                 </p>
@@ -65,7 +65,6 @@
         
             <section id="question2">
                 <h2>What are two (or more) benefits of using semantic tags?</h2>
-                <p>
                     <ul>
                         <li>One benefit of using a semantic tag is allowing someone who does not understand any sort of HTML to
                             have a slight understanding of what is actually happening in the code. For example, if someone is trying
@@ -77,7 +76,6 @@
                             at the specific sections that you have in an organized way and really understand where you went wrong.
                         </li>
 				    </ul>
-                </p>
             </section>
         
     </div>
