changed bg color

--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -42,6 +42,10 @@
                 'h1   h1'
                 'question1  question2';
         }
+
+        body {
+            background-color: rgb(193, 188, 220);
+        }   
 	</style>
 
 </head>
