--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -70,11 +70,18 @@
             <section id="question2">
                 <h2>Definitions:</h2>
                     <ul>
-                        <li>px, pt:
+                        <li>px, pt: Piels (px) and points (pt) are both absolute unit lenghts, so they have a set value of size. A pixel is 1/96th of an inch, and a point is 
+                            1/72nd of an inch. You can use the points and the pixels as a set length, and most often times they are used when trying to pick a font 
+                            size when you are creating a wesbite.
                         </li>
-                        <li>vw, vh:
+                        <li>vw, vh: A viewport width (vw) and a vl (viewport length), are essentially a unit type 
+                            where the length and width are relative to the screen. So, if something is like 12vw units, that means it is 12 percent of the width 
+                            of the viewport. So when you change the size of the viewport, the viewport units are relative and will also shrink alongside with the viewport.
                         </li>
-                        <li>vmax, vmin:
+                        <li>vmax, vmin: The viewport maximum (vmax) and viewport minimum (vmin) are very similar to the vw and vh, in that it is relative 
+                            to the viewport. A unit of vmax is 1% of the viewport screen. However, it is measured based on which one is the smaller of the two 
+                            between the width and the height. If the height is 1200 pixels and the width is 1000 pixels, then the vmax is going to relate to 
+                            the height. So a unit of 1 vmax would be 1% of that height of 1200 pixels.
                         </li>
 				    </ul>
             </section>
