made it upppercase and took away color

--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -12,7 +12,7 @@
 	<style>
 		
        h2 {
-            background-color:rgb(150, 135, 227)
+            text-transform: uppercase;
         }
 
         h1 {
