--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -5,7 +5,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Code Log 1: HTML Semantic Tags</title>
+	<title>Code Log 2: CSS Measuring Units</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -13,6 +13,7 @@
 		
        h2 {
             text-transform: uppercase;
+            font-family: "Arial", sans-serif;
         }
 
         h1 {
@@ -21,7 +22,7 @@
         }
 
         p, ul {
-            background-color: rgb(180, 170, 229)
+            background-color: rgb(188, 180, 228)
         }
 
         #question1 {
@@ -52,10 +53,10 @@
 <body>
 
     <div id="codelog1">
-	<h1>Code Log 1: HTML Semantic Tags</h1>
+	<h1>Code Log 2: CSS Measuring Units</h1>
     
             <section id="question1">
-                <h2>The difference between absolute and relative CSS length units </h2>
+                <h2>Difference of absolute and relative CSS length units: </h2>
                 <p>
                     The main difference between absolute and relative CSS length units, is that an absolute length is one that is 
                     generally the same size every time. For example, a centimeter is going to be a centimeter and the same amount of 
