--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -19,18 +19,20 @@
         h1 {
             grid-area: h1;
             text-align: center;
-        }
-
-        p, ul {
-            background-color: rgb(188, 180, 228)
+            font-family: "Arial", sans-serif;
+            font-size: 50pt;
         }
 
         #question1 {
             grid-area: question1;
+            background-color: rgb(255, 255, 255);
+            font-family: "Arial", sans-serif;
         }
 
         #question2 {
             grid-area: question2;
+            background-color: rgb(255, 255, 255);
+            font-family: "Arial", sans-serif;
         }
 
 
