fixed typo and added padding

--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -27,12 +27,14 @@
             grid-area: question1;
             background-color: rgb(255, 255, 255);
             font-family: "Arial", sans-serif;
+            padding: 5px; 
         }
 
         #question2 {
             grid-area: question2;
             background-color: rgb(255, 255, 255);
             font-family: "Arial", sans-serif;
+            padding: 5px; 
         }
 
 
@@ -73,7 +75,7 @@
             <section id="question2">
                 <h2>Definitions:</h2>
                     <ul>
-                        <li>px, pt: Piels (px) and points (pt) are both absolute unit lenghts, so they have a set value of size. A pixel is 1/96th of an inch, and a point is 
+                        <li>px, pt: Pixels (px) and points (pt) are both absolute unit lenghts, so they have a set value of size. A pixel is 1/96th of an inch, and a point is 
                             1/72nd of an inch. You can use the points and the pixels as a set length, and most often times they are used when trying to pick a font 
                             size when you are creating a wesbite.
                         </li>
