final padding chagnes

--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -27,14 +27,16 @@
             grid-area: question1;
             background-color: rgb(255, 255, 255);
             font-family: "Arial", sans-serif;
-            padding: 5px; 
+            text-align: justify;
+            padding: 20px; 
         }
 
         #question2 {
             grid-area: question2;
             background-color: rgb(255, 255, 255);
             font-family: "Arial", sans-serif;
-            padding: 5px; 
+            text-align: justify;
+            padding: 20px; 
         }
 
 
