labeled paragraphs and added mariging to the first one

--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -15,11 +15,11 @@
 
 <body>
     <main>
-        <section>
+        <section id="title">
             <h1>Designing as Visual Organization</h>
                 <h2>Excerpts from Chapter 10 of the book On Weaving, by Anni Albers, 1965</h2>
         </section>
-        <section>
+        <section id="para1">
             <p>It is safe, I suppose, to assume that today most if not all of us have had the experience of looking down
                 from an airplane onto this earth. What we see is a free flow of forms intersected here and there by
                 straight lines, rectangles, circles, and evenly drawn curves; that is, by shapes of great regularity.
@@ -27,7 +27,7 @@
                 the essence of designing a visually comprehensible, simplified organization of forms that is distinct
                 from nature’s secretive and complex working.</p>
         </section>
-        <section>
+        <section id="para2">
             <p>Or on a beach, we may find a button, a bottle, a plank of wood, immediately recognizable as “our” doing,
                 belonging to our world of forms and not to that which made the shells, the seaweed, and the undulated
                 tracings of waves on sand. Also we can observe the counterplay of the forming forces: the sea slowly
@@ -39,7 +39,7 @@
                 forms that, however far they may deviate in their final development, are intrinsically geometric.” </p>
         </section>
 
-        <section>
+        <section id="para3">
             <p>To turn from “looking at” to action: we grow cabbages in straight rows and are not tempted by nature’s
                 fanciful way of planting to scatter them freely about. We may argue that sometimes we follow her method
                 and plant a bush here and another there, but even then we “clear” the ground. Always, though sometimes
@@ -48,7 +48,7 @@
                 characteristics: forms that, however far they may deviate in their final development, are intrinsically
                 geometric.</p>
         </section>
-        <section>
+        <section id="para4">
             <p>If, then, it appears that our stamp is or should be an immediate or implicit lucidity, a considered
                 position, a reduction to the comprehensible by reason or intuition in whatever we touch (confusion
                 always gets a negative rating), we have established a basis for designing — designing in any field. From
@@ -56,7 +56,7 @@
                 law, the weaving of a fabric, or the painting of a picture — behind the endless list of things shaped is
                 a work of clarification, of controlled formulation.</p>
         </section>
-        <section>
+        <section id="para5">
             <p>By using the term “designing” for all these varied ways of pre-establishing form, we are, of course,
                 doing some violence to the word. “Designing” usually means “giving shape to a useful object.” We do not
                 speak of designing a picture or a concerto, but of designing a house, a city, a bowl, a fabric. But
@@ -69,7 +69,7 @@
                 toward which broad production slowly moves or should move.”</p>
         </section>
 
-        <section>
+        <section id="para6">
             <p>For we certainly realize that there are no exclusive materials reserved for art, though we are often told
                 otherwise. Neither preciousness nor durability of material are prerequisites. A work of art, we know,
                 can be made of sand or sound, of features or flowers, as much as of marble or gold. Any material, any
@@ -81,7 +81,7 @@
                 designing is or should be methodical planning, whether of simple or intricately organized forms; and if
                 done imaginatively and sensitively, designing can become art….</p>
         </section>
-        <section>
+        <section id="para7">
             <p>Today, we should try to counteract habits that only rarely leave us time to collect ourselves. Every hour
                 on the hour we seem to need the latest and, as it turns out, usually the most unsettling and gloomy
                 report, often, when seen in retrospect, of non-essentials. Yesterday’s paper is waste paper. Wisdom and
@@ -92,7 +92,7 @@
                 any given moment of imposed restraint of action — without a bundle of distractions in our hand….”</p>
         </section>
 
-        <section>
+        <section id="para8">
             <p>And though it may appear that we are straying from our line of thought, it is on the contrary here on the
                 ground of philosophy and morals that attitudes and convictions, the starting points of our actions, are
                 formed. Two matters here may be of special concern to the conscientious designer and may make him stop
@@ -104,7 +104,7 @@
                 dominantly individual traits of the planner — the designer finds himself in direct conflict with the
                 economic pattern of our time.</p>
         </section>
-        <section>
+        <section id="para9">
             <p>For the economy of today is built largely upon change, and the “successful” designer, a term I have not
                 used before, will have to consider the matter of “calculated obsolescence.” We are urged today to want
                 more and more things, and we are subjected to a vigorous campaigning for always newer things, things
@@ -115,14 +115,14 @@
                 designer.”</p>
         </section>
 
-        <section>
+        <section id="para10">
             <p>As you will have noticed, I have made no distinction between the craftsman designer, the industrial
                 designer, and the artist — because the fundamental, if not the specific, considerations are the same, I
                 believe, for those who work with the conscience and apperception of the artist. With surprise and
                 reassurance I recently came across a statement by the painter Lionel Feininger, who speaks of one of his
                 pictures as having “painted itself.”</p>
         </section>
-        <section>
+        <section id="para11">
             <p>At the beginning we spoke here of the comprehensible orderliness which underlies all our doing and whose
                 ultimate form is also that of art. Material form becomes meaningful form through design, that is,
                 through considered relationships. And this meaningful form can become the carrier of a meaning that
@@ -133,7 +133,7 @@
                 reassure us, art tries, I believe, to show us a wholeness that we can comprehend.</p>
         </section>
 
-        <section>
+        <section id="para12">
             <p>About the Author</p>
         </section>
         <section>
