--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -86,7 +86,7 @@
         </section>
         <section id="para7">
 
-            <p class="callout">“Nevertheless, we are seldom found — on train or plane, on bus or boat, or in
+            <p class="callout" id="quote2">“Nevertheless, we are seldom found — on train or plane, on bus or boat, or in
                 any given moment of imposed restraint of action — without a bundle of distractions in our hand….”</p>
 
             <p>Today, we should try to counteract habits that only rarely leave us time to collect ourselves. Every hour
@@ -110,9 +110,9 @@
                 economic pattern of our time.</p>
         </section>
         <section id="para9">
-             <p class="callout">“…the designer who takes the longer view is by no means identical with the ‘successful’
+             <p class="callout" id="quote3">“…the designer who takes the longer view is by no means identical with the ‘successful’
                 designer.”</p>
-                
+
             <p>For the economy of today is built largely upon change, and the “successful” designer, a term I have not
                 used before, will have to consider the matter of “calculated obsolescence.” We are urged today to want
                 more and more things, and we are subjected to a vigorous campaigning for always newer things, things
