--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -110,15 +110,17 @@
                 economic pattern of our time.</p>
         </section>
         <section id="para9">
-             <p class="callout" id="quote3">“…the designer who takes the longer view is by no means identical with the ‘successful’
-                designer.”</p>
-
             <p>For the economy of today is built largely upon change, and the “successful” designer, a term I have not
                 used before, will have to consider the matter of “calculated obsolescence.” We are urged today to want
                 more and more things, and we are subjected to a vigorous campaigning for always newer things, things
                 that are not necessarily newer in performance. We are asked to shift from red to blue or from this bit
                 of trimming to that for the questionable reason or unreason of fashion. It is evident, I think, that the
                 designer who takes the longer view is by no means identical with the “successful” designer….</p>
+        </section>
+
+        <section id="quote4"
+            <p  class="callout">“…the designer who takes the longer view is by no means identical with the ‘successful’
+                designer.” </p>
         </section>
 
         <section id="para10">
