finsihed abt the author

--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -60,8 +60,8 @@
         <section id="para5">
             <p class="callout">“Culture, surely, is measured by art, which sets the standard of quality
                 toward which broad production slowly moves or should move.”</p>
-            
-                <p>By using the term “designing” for all these varied ways of pre-establishing form, we are, of course,
+
+            <p>By using the term “designing” for all these varied ways of pre-establishing form, we are, of course,
                 doing some violence to the word. “Designing” usually means “giving shape to a useful object.” We do not
                 speak of designing a picture or a concerto, but of designing a house, a city, a bowl, a fabric. But
                 surely these can all be, like a painting or music, works of art. Usefulness does not prevent a thing,
@@ -118,9 +118,9 @@
                 designer who takes the longer view is by no means identical with the “successful” designer….</p>
         </section>
 
-        <section id="quote4"
-            <p  class="callout">“…the designer who takes the longer view is by no means identical with the ‘successful’
-                designer.” </p>
+        <section id="quote4" <p class="callout">“…the designer who takes the longer view is by no means identical with
+            the ‘successful’
+            designer.” </p>
         </section>
 
         <section id="para10">
@@ -142,10 +142,19 @@
         </section>
 
         <section id="para12">
-            <p>About the Author</p>
+            <h2>About the Author</h2>
         </section>
-        <section>
-            <p>[Research, write, and lay out 2 or more paragraphs of biographical information about Anni Albers.]</p>
+        <section id="para13">
+            <p>Annie Albers was a visual artist, and she was widely known for how she blurred the lines between things
+                like traditional craft and art. Her main focus was mostly on textile art. She then studied at the
+                Bauhaus, but due to her studying during the times of Nazi Germany, she had to rellocate to the United
+                States. She then had a solo exhibition at the Museum of Modern Art in New York</p>
+        </section>
+        <section id="para14">
+            <p>She became one of the most established textile artists, and she had many major exhibitions, including two
+                major ones in Germany. Her artwork experimented print-making, weaving, and even jewelry. She
+                experimented with different materials, and also claimed that there was no material that couldn't be made
+                into art. </p>
         </section>
     </main>
 </body>
