started second layout and fixed first layout

--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -118,7 +118,10 @@
                 designer who takes the longer view is by no means identical with the “successful” designer….</p>
         </section>
 
-        <section id="quote4" <p class="callout">“…the designer who takes the longer view is by no means identical with
+        <section id="quote4">
+
+        </section> 
+            <p class="callout">“…the designer who takes the longer view is by no means identical with
             the ‘successful’
             designer.” </p>
         </section>
