--- a/anni-albers/index2.html
+++ b/anni-albers/index2.html
@@ -20,41 +20,41 @@
             <h2>Excerpts from Chapter 10 of the book On Weaving, by Anni Albers, 1965</h2>
     </section>
 
-    <p>It is safe, I suppose, to assume that today most if not all of us have had the experience of looking down
+    <p id="para1">It is safe, I suppose, to assume that today most if not all of us have had the experience of looking down
         from an airplane onto this earth. What we see is a free flow of forms intersected here and there by
         straight lines, rectangles, circles, and evenly drawn curves; that is, by shapes of great regularity.
         Here we have, then, natural and man-made forms in contradistinction. And here before us we can recognize
         the essence of designing a visually comprehensible, simplified organization of forms that is distinct
         from nature’s secretive and complex working.</p>
 
-    <p class="callout">“…when the matter of usefulness is involved, we plainly and without qualification use our
+    <p id="callout1" class="callout">“…when the matter of usefulness is involved, we plainly and without qualification use our
         characteristics:
         forms that, however far they may deviate in their final development, are intrinsically geometric.” </p>
 
-    <p>Or on a beach, we may find a button, a bottle, a plank of wood, immediately recognizable as “our” doing,
+    <p id="para2">Or on a beach, we may find a button, a bottle, a plank of wood, immediately recognizable as “our” doing,
         belonging to our world of forms and not to that which made the shells, the seaweed, and the undulated
         tracings of waves on sand. Also we can observe the counterplay of the forming forces: the sea slowly
         grinding an evenly walled piece of glass, foreign to it in shape and substance, into a multiform body
         suitable for adoption into its own orbit of figuration. On the other hand, we see the waves controlled,
         where dams and dikes draw a rigid line between land and water.</p>
 
-    <p>To turn from “looking at” to action: we grow cabbages in straight rows and are not tempted by nature’s
+    <p id="para3">To turn from “looking at” to action: we grow cabbages in straight rows and are not tempted by nature’s
         fanciful way of planting to scatter them freely about. We may argue that sometimes we follow her method
         and plant a bush here and another there, but even then we “clear” the ground. Always, though sometimes
         in a way that is roundabout and apparent only as an underlying scheme of composition, it is clarity that
         we seek. But when the matter of usefulness is involved, we plainly and without qualification use our
         characteristics: forms that, however far they may deviate in their final development, are intrinsically
         geometric.</p>
-    <p>If, then, it appears that our stamp is or should be an immediate or implicit lucidity, a considered
+    <p id="para4"> If, then, it appears that our stamp is or should be an immediate or implicit lucidity, a considered
         position, a reduction to the comprehensible by reason or intuition in whatever we touch (confusion
         always gets a negative rating), we have established a basis for designing — designing in any field. From
         city-planning to the planning of a house or road, from the composing of music to the formulation of a
         law, the weaving of a fabric, or the painting of a picture — behind the endless list of things shaped is
         a work of clarification, of controlled formulation.</p>
-    <p class="callout">“Culture, surely, is measured by art, which sets the standard of quality
+    <p id="callout2" class="callout">“Culture, surely, is measured by art, which sets the standard of quality
         toward which broad production slowly moves or should move.”</p>
 
-    <p>By using the term “designing” for all these varied ways of pre-establishing form, we are, of course,
+    <p id="para5">By using the term “designing” for all these varied ways of pre-establishing form, we are, of course,
         doing some violence to the word. “Designing” usually means “giving shape to a useful object.” We do not
         speak of designing a picture or a concerto, but of designing a house, a city, a bowl, a fabric. But
         surely these can all be, like a painting or music, works of art. Usefulness does not prevent a thing,
@@ -63,7 +63,7 @@
         and sensitivity that we should try to attain. Culture, surely, is measured by art, which sets the
         standard of quality toward which broad production slowly moves or should move.</p>
 
-    <p>For we certainly realize that there are no exclusive materials reserved for art, though we are often told
+    <p id="para6">For we certainly realize that there are no exclusive materials reserved for art, though we are often told
         otherwise. Neither preciousness nor durability of material are prerequisites. A work of art, we know,
         can be made of sand or sound, of features or flowers, as much as of marble or gold. Any material, any
         working procedure, and any method of production, manual or industrial, can serve an end that may be art.
@@ -74,16 +74,16 @@
         designing is or should be methodical planning, whether of simple or intricately organized forms; and if
         done imaginatively and sensitively, designing can become art….</p>
 
-    <p class="callout" id="quote2">“Nevertheless, we are seldom found — on train or plane, on bus or boat, or in
+    <p class="callout" id="callout3">“Nevertheless, we are seldom found — on train or plane, on bus or boat, or in
         any given moment of imposed restraint of action — without a bundle of distractions in our hand….”</p>
 
-    <p>Today, we should try to counteract habits that only rarely leave us time to collect ourselves. Every hour
+    <p id="para7">Today, we should try to counteract habits that only rarely leave us time to collect ourselves. Every hour
         on the hour we seem to need the latest and, as it turns out, usually the most unsettling and gloomy
         report, often, when seen in retrospect, of non-essentials. Yesterday’s paper is waste paper. Wisdom and
         insight hardly make headlines. Nevertheless, we are seldom found — on train or plane, on bus or boat, or
         in any given moment of imposed restraint of action — without a bundle of distractions in our hand in the
         form of papers or magazines.</p>
-    <p>And though it may appear that we are straying from our line of thought, it is on the contrary here on the
+    <p id="para8">And though it may appear that we are straying from our line of thought, it is on the contrary here on the
         ground of philosophy and morals that attitudes and convictions, the starting points of our actions, are
         formed. Two matters here may be of special concern to the conscientious designer and may make him stop
         and think or, perhaps, think and stop. The first is that with his help another object will be added to
@@ -93,21 +93,21 @@
         fashion — and by finding for it a form as anonymous as possible — that is, a form unburdened by the
         dominantly individual traits of the planner — the designer finds himself in direct conflict with the
         economic pattern of our time.</p>
-    <p>For the economy of today is built largely upon change, and the “successful” designer, a term I have not
+    <p id="para9">For the economy of today is built largely upon change, and the “successful” designer, a term I have not
         used before, will have to consider the matter of “calculated obsolescence.” We are urged today to want
         more and more things, and we are subjected to a vigorous campaigning for always newer things, things
         that are not necessarily newer in performance. We are asked to shift from red to blue or from this bit
         of trimming to that for the questionable reason or unreason of fashion. It is evident, I think, that the
         designer who takes the longer view is by no means identical with the “successful” designer….</p>
-    <p class="callout">“…the designer who takes the longer view is by no means identical with
+    <p id="callout4" class="callout">“…the designer who takes the longer view is by no means identical with
         the ‘successful’
         designer.” </p>
-    <p>As you will have noticed, I have made no distinction between the craftsman designer, the industrial
+    <p id="para10">As you will have noticed, I have made no distinction between the craftsman designer, the industrial
         designer, and the artist — because the fundamental, if not the specific, considerations are the same, I
         believe, for those who work with the conscience and apperception of the artist. With surprise and
         reassurance I recently came across a statement by the painter Lionel Feininger, who speaks of one of his
         pictures as having “painted itself.”</p>
-    <p>At the beginning we spoke here of the comprehensible orderliness which underlies all our doing and whose
+    <p id="para11">At the beginning we spoke here of the comprehensible orderliness which underlies all our doing and whose
         ultimate form is also that of art. Material form becomes meaningful form through design, that is,
         through considered relationships. And this meaningful form can become the carrier of a meaning that
         takes us beyond what we think of as immediate reality. But an orderliness that is too obvious cannot
@@ -115,12 +115,12 @@
         their proportions, must have that quality of mystery that we know in nature. Nature, however, shows
         herself to us only in part. The whole of nature, though we always seek it, remains hidden from us. To
         reassure us, art tries, I believe, to show us a wholeness that we can comprehend.</p>
-    <h2>About the Author</h2>
-    <p>Annie Albers was a visual artist, and she was widely known for how she blurred the lines between things
+    <h2 id="para12">About the Author</h2>
+    <p id="para13">Annie Albers was a visual artist, and she was widely known for how she blurred the lines between things
         like traditional craft and art. Her main focus was mostly on textile art. She then studied at the
         Bauhaus, but due to her studying during the times of Nazi Germany, she had to rellocate to the United
         States. She then had a solo exhibition at the Museum of Modern Art in New York</p>
-    <p>She became one of the most established textile artists, and she had many major exhibitions, including two
+    <p id="para14">She became one of the most established textile artists, and she had many major exhibitions, including two
         major ones in Germany. Her artwork experimented print-making, weaving, and even jewelry. She
         experimented with different materials, and also claimed that there was no material that couldn't be made
         into art. </p>
