accidnetally deleted main

--- a/anni-albers/index2.html
+++ b/anni-albers/index2.html
@@ -14,7 +14,7 @@
 </head>
 
 <body id="secondLayout">
-
+<main>
     <section id="title">
         <h1>Designing as Visual Organization</h>
             <h2>Excerpts from Chapter 10 of the book On Weaving, by Anni Albers, 1965</h2>
@@ -124,7 +124,7 @@
         major ones in Germany. Her artwork experimented print-making, weaving, and even jewelry. She
         experimented with different materials, and also claimed that there was no material that couldn't be made
         into art. </p>
-
+</main>
 </body>
 
 </html>
