added to main main index webstite

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 	<h2>Tiny Projects</h2>
 	<ul>
 		<li><a href="/favorite-recipe/index.html">Tiny Project 2: Favorite Recipe</li>
+		<li><a href="/anni-albers/index.html">Tiny Project 3: Design Quote Layout (part 1)</li>
+		<li><a href="/anni-albers/index2.html">Tiny Project 3: Design Quote Layout (part 2)</li>
 	</ul>
 
 	<h2>Major Project</h2>
