added the code logs to my main page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 	<h2>Activities</h2>
 	<ul>
-		<li>Links to future activities go here</li>
+		<li><a href="/codelogs/log1.html">Code Log 1: HTML Semantic Tags</li>
+		<li><a href="/codelogs/log2.html">Code Log 2: CSS Measuring Units</li>
 	</ul>
 
 	<h2>Tiny Projects</h2>
