fixed the linking

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 	<h2>Activities</h2>
 	<ul>
-		<li><a href="/codelogs/log1.html">Code Log 1: HTML Semantic Tags</li>
-		<li><a href="/codelogs/log2.html">Code Log 2: CSS Measuring Units</li>
+		<li><a href="/codelogs/log1.html">Code Log 1: HTML Semantic Tags</a></li>
+		<li><a href="/codelogs/log2.html">Code Log 2: CSS Measuring Units</a></li>
 	</ul>
 
 	<h2>Tiny Projects</h2>
 	<ul>
-		<li><a href="/favorite-recipe/index.html">Tiny Project 2: Favorite Recipe</li>
-		<li><a href="/anni-albers/index.html">Tiny Project 3: Design Quote Layout (part 1)</li>
-		<li><a href="/anni-albers/index2.html">Tiny Project 3: Design Quote Layout (part 2)</li>
+		<li><a href="/favorite-recipe/index.html">Tiny Project 2: Favorite Recipe</a></li>
+		<li><a href="/anni-albers/index.html">Tiny Project 3: Design Quote Layout (part 1)</a></li>
+		<li><a href="/anni-albers/index2.html">Tiny Project 3: Design Quote Layout (part 2)</a></li>
 	</ul>
 
 	<h2>Major Project</h2>
