set up code log 3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<ul>
 		<li><a href="/codelogs/log1.html">Code Log 1: HTML Semantic Tags</a></li>
 		<li><a href="/codelogs/log2.html">Code Log 2: CSS Measuring Units</a></li>
+		<li><a href="/codelogs/log3.html">Code Log 3: CSS Media Queries</a></li>
 	</ul>
 
 	<h2>Tiny Projects</h2>
